--- a/scss/activities/_choice.scss
+++ b/scss/activities/_choice.scss
@@ -58,7 +58,7 @@
         .chart-table-data {
           display: block;
           table {
-            @extend .table, .table-bordered;
+            @extend %table-bordered;
           }
         }
       }
