--- a/scss/pages/_courseview.scss
+++ b/scss/pages/_courseview.scss
@@ -6,6 +6,22 @@
 #page-course-view-topcoll {
   #region-main {
     .course-content {
+      li.activity {
+        div.activityinstance div.dimmed.dimmed_text {
+          span.instancename {
+            color: $slate-grey;
+          }
+          div.activity-label-container {
+            div.activity-label, div.group-icon, div.media-icon {
+              color: $slate-grey;
+            }
+          }
+        }
+        &.type-assessed div.activityinstance div.dimmed.dimmed_text div.activity-label-container div.activity-label {
+          color: $white;
+          background-color: $slate-grey;
+        }
+      }
     }
   }
   // grid format only
