--- a/scss/activities/_questionnaire.scss
+++ b/scss/activities/_questionnaire.scss
@@ -1,30 +1,6 @@
 /* Questionnaire
    ======================== */
 
-// pre questionnaire intro page
-#page-mod-questionnaire-view {
-}
-
-// questionniare page and post submission page
-#page-mod-questionnaire-complete {
-  // post submission page
-  .mod_questionnaire_completepage {
-    margin-bottom: $component-margin-bottom-sm !important;
-    .singlebutton {
-      // continue button
-      button {
-        @extend %btn-primary;
-        margin-bottom: 0 !important;
-      }
-    }
-  }
-}
-
-#page-mod-questionnaire-preview fieldset,
-#page-mod-questionnaire-complete fieldset {
-  min-inline-size: auto;
-}
-
 .path-mod-questionnaire {
   // pre questionnaire intro page
   .mod_questionnaire_viewpage {
@@ -38,10 +14,38 @@
       }
     }
   }
+  /*
+  // my report / report pages
+  // 'Print this response' button
+  &#page-mod-questionnaire-myreport .respondentinfo > a,
+  &#page-mod-questionnaire-report .generalbox > a:nth-child(2) {
+    @extend %btn-secondary;
+    display: block;
+    width: max-content;
+    img {
+      display: none;
+    }
+    &::before {
+      @include icon-before;
+      @include fa-content($fa-print);
+    }
+    &::after {
+      content: 'Print this response';
+    }
+  }
+  */
+  // post submission page
   &#page-mod-questionnaire-complete {
-    .surveyTitle {
-      padding: 0;
-      margin-bottom: $component-margin-bottom;
+    .mod_questionnaire_completepage {
+      position: relative;
+      margin-bottom: $component-margin-bottom-sm !important;
+    }
+    .singlebutton {
+      // continue button
+      button {
+        @extend %btn-primary;
+        margin-bottom: 0 !important;
+      }
     }
     .message {
       border: none;
@@ -56,28 +60,48 @@
       border-top: 1px solid $table-border;
       border-left: 1px solid $table-border;
     }
-    .qn-answer table {
-      @extend .table, .table-bordered;
-    }
   }
-}
-
-.path-mod-questionnaire {
   // space between buttons
-  #notice .buttons .singlebutton{
+  #notice .buttons .singlebutton {
     margin-right: $component-margin-xs;
   }
-  .floatprinticon {
-    width: 100%;
-    margin: 0;
-    // couldn't add bottom-margin to title as this overrides
-    // styles of title on other pages, so had to apply it to the print
-    margin-top: -$component-margin;
-    float: none;
-    text-align: right !important;
-    display: block;
+  /*
+  // tabs
+  .nav-tabs {
+    margin: 0 0 $component-margin-bottom 0 !important;
+    li {
+      margin: 0 !important;
+    }
   }
+  */
+  // page title
+  .surveyTitle {
+    @extend %h2;
+    // to display inline with 'Print Blank' button
+    max-width: calc(100% - 130px - 1rem);
+    padding: 0;
+    margin-bottom: $component-margin-bottom;
+  }
+  // 'Print Blank' button
+  .floatprinticon {
+    @extend %btn-secondary;
+    margin: 0 !important;
+    text-align: right !important;
+    position: absolute;
+    top: 0;
+    right: 0;
+    img {
+      display: none;
+    }
+    &::before {
+      @include icon-before;
+      @include fa-content($fa-print);
+    }
+  }
+  // individual question container
   .qn-container {
+    padding: 0;
+    min-inline-size: auto;
     &:first-of-type {
       position: relative;
     }
@@ -87,7 +111,8 @@
       font-size: 1rem;
       font-weight: normal;
       display: block;
-      margin-left: 0.825rem;
+      // to allow for icon
+      margin-left: 20px;
       text-align: left;
       margin-bottom: $component-margin-bottom;
       cursor: text;
@@ -118,25 +143,66 @@
       }
     }
     .qn-content {
-      margin-left: 0;
+      margin: 0;
       .qn-question {
         padding: 0;
-        margin: 0;
-        margin-bottom: $component-margin-bottom-sm;
+        margin: 0 0 $component-margin-bottom-sm 0;
         background-color:transparent;
         p,
         label {
           margin: 0 0 $component-margin-bottom 0;
           font-weight: bold;
           cursor: text;
+          &:last-child {
+            margin-bottom: 0;
+          }
+        }
+        // prevent cut off on hover focus state
+        overflow: visible;
+        .no-overflow {
+          overflow: visible;
         }
       }
-      .qn-answer, .editor_atto_wrap {
+      .qn-answer {
+        // align answer to question text
+        margin: 0;
+        // Check Boxes and Radio Buttons question
+        input[type="checkbox"],
+        input[type="radio"] {
+          margin: 0 $component-margin-xs 0 0;
+          & + label {
+            margin: 0 $component-margin-sm 0 0;
+            padding: 0;
+          }
+        }
+        // Date question
+        .qn-datemsg {
+          margin-bottom: $component-margin-xs;
+        }
+        // Radio Buttons question
+        & > span {
+          display: inline-flex;
+          align-items: center;
+        }
+        // Rate(scale 1..5) question
+        table {
+          @extend %table-bordered;
+          margin-bottom: 0 !important;
+        }
+      }
+      .editor_atto_wrap {
         margin-bottom: $component-margin-bottom;
       }
-      .qn-answer table {
-        margin-bottom: 0 !important;
-      }
+    }
+    // alert boxes interrupt the margin between questions
+    // so apply xl margin between consecutive questions
+    & + .qn-container {
+      margin-top: $component-margin-xl;
+    }
+    // and a smaller margin between the alert box and its
+    // associated question
+    & + .alert {
+      margin: $component-margin-sm 0 $component-margin-bottom-xl 0;
     }
   }
 }
