--- a/scss/components/_blockquote.scss
+++ b/scss/components/_blockquote.scss
@@ -35,7 +35,7 @@ figure.blockquote {
   padding: 1.25rem 1.75rem 1.25rem 4.625rem;
   blockquote {
     border: none;
-    margin-bottom: $component-margin-bottom !important;
+    margin: 0 0 $component-margin-bottom 0 !important;
     padding: 0;
     &::before {
       content: '\201c';
