--- a/scss/components/_viewhide.scss
+++ b/scss/components/_viewhide.scss
@@ -8,7 +8,7 @@
 .view-description-container {
   // from Common
   @extend %note-container;
-  .card-body {
+  & > [class^="view-"][class$="-card"] > .card-body {
     margin-top: $component-margin;
   }
 }
