--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -91,7 +91,7 @@
       // edit button (cog)
       .moodle-actionmenu {
         background: transparent;
-        margin: 0;
+        margin: 0 0 $component-margin-bottom-xs 0;
         padding: 0;
         a.dropdown-toggle {
           @extend %btn-primary-no-margin;
